fix: adjust panel content margins to prevent jquery slide up/down jumpiness

--- a/css/main.scss
+++ b/css/main.scss
@@ -38,3 +38,7 @@
 	-ms-filter: "FlipV";
 	filter: flipv;
 }
+
+.accordion-panel *:last-child {
+	margin-bottom: 0;
+}
